# sized_bitset

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
sized_bitset/: .gitignore  Cargo.toml
sized_bitset/src/: bitset.rs  error.rs  lib.rs
sized_bitset_macros/: Cargo.toml
sized_bitset_macros/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
