[package]
name = "sized_bitset"
version = "0.3.1"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "statically-sized biset"
repository = "https://github.com/LoliGothick/sized_bitset"
license = "MIT"

[features]
default = []
arbitrary = ["proptest", "proptest-derive"]

[dependencies]
deriving_via = "1.4.0"
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
itertools = "0.12.1"
thiserror = "1.0.40"
sized_bitset_macros = "0.3.0"

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"
