[package]
name = "sized_bitset_macros"
version = "0.3.0"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "internal use macros for sized_biset"
repository = "https://github.com/LoliGothick/sized_bitset"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["full"] }
